fix: fix incompatible library issue